(fixes #36) balls on quote better on mobile

--- a/src/app/home/features/features.component.scss
+++ b/src/app/home/features/features.component.scss
@@ -19,7 +19,7 @@
   width: 100vw;
   height: 100vh;
   min-height: 750px;
-  margin-top: 10rem;
+  margin-top: 5rem;
   display: table;
   position: relative;
 
